share z-index and fix unit test

--- a/assets/scss/_components/share.scss
+++ b/assets/scss/_components/share.scss
@@ -4,30 +4,30 @@
   text-transform: uppercase;
   display: inline-flex;
   flex-direction: column;
-  @include media-breakpoint-up(lg){
+  @include media-breakpoint-up(lg) {
     align-items: center;
     margin-left: 1.5rem;
     position: -webkit-sticky;
     position: sticky;
     top: 65px;
     padding-top: 2rem;
-
+    z-index: 1000;
   }
-  a{
+  a {
     display: inline-block;
     margin-top: .5rem;
     margin-right: 1rem;
-    @include media-breakpoint-up(lg){
+    @include media-breakpoint-up(lg) {
       display: block;
       margin: .3rem 0;
     }
   }
-  svg{
+  svg {
     transition: all .3s ease;
   }
 
-  a:hover{
-    svg{
+  a:hover {
+    svg {
       transform: translateY(-3px);
     }
   }
